--- a/Index.html
+++ b/Index.html
@@ -63,7 +63,7 @@
                     <th>Martes</th>
                     <th>Miercoles</th>
                     <th>Jueves</th>
-                    <th>Vierens</th>
+                    <th>Viernes</th>
                 </tr>
                 <tr>
                     <td>7:00 a 7:50</td>
